--- a/app/globals.css
+++ b/app/globals.css
@@ -1,3 +1,82 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.gradient-overlay.test {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: linear-gradient(
+    190deg,
+    #1f80f0 15.05%,
+    rgba(31, 128, 240, 0) 30.39%
+  );
+}
+
+#hello.test {
+  background: radial-gradient(
+    59.82% 121.73% at -9.66% 130.31%,
+    #00e9ea 0%,
+    #1f80f0 52.08%,
+    #005bc4 100%
+  );
+}
+.text-body-1 {
+  font-size: 16px;
+  line-height: 160%;
+  font-weight: 400;
+}
+.text-head-6 {
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 2.56px;
+  font-weight: 700;
+}
+
+.text-res-head-6 {
+  font-size: 12px;
+  line-height: 1.5;
+  letter-spacing: 1.44px;
+  font-weight: 700;
+}
+
+.text-res-head-2 {
+  font-size: 32px;
+  line-height: 120%;
+  font-weight: 600;
+}
+
+.text-head-2 {
+  font-size: 56px;
+  line-height: 110%;
+  font-weight: 600;
+}
+
+.text-blue-text {
+  --tw-text-opacity: 1;
+  color: rgb(11 48 91 / var(--tw-text-opacity));
+}
+.text-blue-main {
+  --tw-text-opacity: 1;
+  color: rgb(31 128 240 / var(--tw-text-opacity));
+}
+
+.font-Montserrat {
+  font-family: Montserrat Variable, sans-serif;
+}
+
+.boxShadow {
+  box-shadow: 0px 23px 30px 0px #16437763;
+}
+@media only screen and (max-width: 1024px) {
+  #hello.test {
+    background: radial-gradient(
+      134.02% 81.35% at -9.66% 129.92%,
+      #00e9ea 0%,
+      #1f80f0 52.08%,
+      #005bc4 100%
+    );
+  }
+}
